# fbrpc_binding

./: .gitignore  CMakeLists.txt  index.ts  package.json  tsconfig.json
src/: FlatBufferBinding.h  main.cpp
src/common/binding/: BindingHelper.h  CallbackWrapper.h  CppBinding.h  CppClassBinding.h  CppStaticBinding.h  PODTypeBinding.h  TypeCheck.h  TypeConversion.h  TypeDecay.h
src/common/hook/: ApiHook.h  GlobalHook.h  WindowHook.cpp  WindowHook.h
src/common/node/: Node.cpp  Node.h
src/common/patch/: DelayLoadHook.cpp
src/common/utils/: Singleton.h  Timer.h  WindowHelper.h
